      in source packages has an mtime later than the changelog entry time.
    - Enable fixdebugpath build flag feature by default.
      Thanks to Mattia Rizzolo <mattia@debian.org>. Closes: #832179
    - Rename various private methods and functions with an underscore prefix
      and unified names.
    - Refactor perl modules directory list into a new function in Test::Dpkg.
  * Documentation:
    - Document Testsuite-Triggers in dsc(5).
    - Fix deb-changes(5) description to talk about .changes instead of .dsc.
      Reported by HW42 <hw42@ipsumj.de>.
    - Use debian/control as the SYNOPSIS in deb-src-control(5).
    - Add new deb-conffiles(5) man page.
    - Add references to deb-control(5) and deb-triggers(5) in dpkg(1).
    - Fix typos for repeated “the” word.
      Prompted by Valentin Samir <valentin.samir@crans.org> in #830989.
    - Fix misspelled -fdebug-prefix-map flag in dpkg-buildflags(1).
      Reported by Mattia Rizzolo <mattia@debian.org>.
    - Remove mention of source format 1.0 supporting building with upstream
      tarball signatures from dpkg-source(1), as this was disabled in 1.18.8.
    - Document all public methods in Dpkg::Changelog::Entry::Debian.

  [ Updated programs translations ]
  * German (Sven Joachim).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 04 Jul 2016 09:58:11 +0200

dpkg (1.18.9) unstable; urgency=medium

  * Require Dpkg::Control::Info in dpkg-buildpackage.
    Initially reported by Helmut Grohne <helmut@subdivi.de>.
    Regression introduced in dpkg 1.18.8. Closes: #829542
  * Documentation:
    - Fix user configuration filename in dpkg-buildpackage(1).
      Thanks to Sven Joachim <svenjoac@gmx.de>. Closes: #829546

 -- Guillem Jover <guillem@debian.org>  Mon, 04 Jul 2016 09:23:13 +0200

dpkg (1.18.8) unstable; urgency=medium

  [ Guillem Jover ]