@@ -17,6 +17,8 @@ dpkg (1.18.10) UNRELEASED; urgency=medium
     - Rename various private methods and functions with an underscore prefix
       and unified names.
     - Refactor perl modules directory list into a new function in Test::Dpkg.
+  * Test suite:
+    - Add new POD coverage author test for public perl modules.
   * Documentation:
     - Document Testsuite-Triggers in dsc(5).
     - Fix deb-changes(5) description to talk about .changes instead of .dsc.
